display all Destiny 2 accounts once logged in

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,7 +12,12 @@
         }
         else
         {
-            <p>Membership ID: @Model.MembershipId</p>
+            <ul>
+            @foreach (var account in @Model.Accounts)
+            {
+                <li>@account.Id: @account.Type.ToString()</li>                
+            }
+            </ul>
         }
     </div>
 </div>
