--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -4,6 +4,7 @@
 
 <div class="row">
     <div class="col-md-12">
+      <p>Max Power: @Model.MaxPower</p>
       <table>
         <tr>
           <td><img src="@Model.KineticWeapon.Icon">[@Model.KineticWeapon.PowerLevel] @Model.KineticWeapon.Name</td>
