show slot names in bold

--- a/MaxPowerLevel/Views/Character/ItemPartial.cshtml
+++ b/MaxPowerLevel/Views/Character/ItemPartial.cshtml
@@ -1,7 +1,7 @@
 @model MaxPowerLevel.Models.Item
 
 <ul style="list-style-type: none;">
-  <li>@Model.Slot.Name:</li>
+  <li><strong>@Model.Slot.Name:</strong></li>
   <li><img src="@Model.Icon"></li>
   <li><span>[@Model.PowerLevel] @Model.Name</span></li>
 </ul>
