make the login button look nicer

--- a/MaxPowerLevel/Views/Home/Index.cshtml
+++ b/MaxPowerLevel/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <div class="row">
     <div class="col-md-12">
-        <a asp-action="Login" asp-controller="Account" asp-route-returnUrl="/Account" class="btn btn-default">Login with Bungie</a>
+        <a class="btn btn-primary btn-lg" asp-action="Login" asp-controller="Account" asp-route-returnUrl="/Account" class="btn btn-default">Login with Bungie</a>
     </div>
 </div>
