update title of max power items section

--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div class="row">
-    <h1>Lowest Items:</h1>
+    <h1>Lowest Items</h1>
   </div>
   <div class="row">
     @foreach(var item in Model.LowestItems)
@@ -23,7 +23,7 @@
     }
   </div>
   <div class="row">
-    <h1>All Items</h1>
+    <h1>Highest Power Items</h1>
   </div>
   <div class="row">
     @foreach(var item in Model.Items)
