--- a/MaxPowerLevel/Views/Shared/_Layout.cshtml
+++ b/MaxPowerLevel/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - MaxPowerLevel - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Andy Schott - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
