--- a/MaxPowerLevel/Views/Shared/_Layout.cshtml
+++ b/MaxPowerLevel/Views/Shared/_Layout.cshtml
@@ -31,9 +31,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                         @if(User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
@@ -54,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Andy Schott - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Andy Schott
         </div>
     </footer>
 
