--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -14,7 +14,7 @@
   <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
   <img src="@Model.EmblemPath" class="d-none d-md-block">
 </picture>
-<h1>Max Power: @Model.MaxPower</h1>
+<h1>Max Power: @(Model.MaxPower + Model.BonusPower)</h1>
 
 <div class="container">
   @{
