--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -15,6 +15,12 @@
   <img src="@Model.EmblemPath" class="d-none d-md-block">
 </picture>
 <h1>Max Power: @(Model.MaxPower + Model.BonusPower)</h1>
+<ul>
+  <li>Normal Engrams: @Model.NormalEngrams.low - @Model.NormalEngrams.high</li>
+  <li>Powerful Tier 1 Engrams: @Model.PowerfulTier1Engrams</li>
+  <li>Powerful Tier 2 Engrams: @Model.PowerfulTier2Engrams</li>
+  <li>Powerful Tier 3 Engrams: @Model.PowerfulTier3Engrams</li>
+</ul>
 
 <div class="container">
   @{
