include character class in title of max power page for a character

--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -3,7 +3,7 @@
 @using System.Linq
 
 @{
-    ViewData["Title"] = "Character Gear";
+    ViewData["Title"] = Model.ClassName + " Max Power";
 }
 
 <p>
