--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -14,7 +14,13 @@
   <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
   <img src="@Model.EmblemPath" class="d-none d-md-block">
 </picture>
-<h1>Max Power: @(Model.MaxPower + Model.BonusPower) (@(Model.MaxPower) + @(Model.BonusPower))</h1>
+<h1>Max Power: @(Model.MaxPower + Model.BonusPower)</h1>
+<ul>
+  <li>Base Power: @Model.MaxPower</li>
+  <li>Seasonal Artifact Power: @Model.BonusPower</li>
+</ul>
+
+<h1>Engram Power Levels</h1>
 <ul>
     @foreach(var engram in Model.Engrams)
     {
