--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -14,9 +14,9 @@
   <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
   <img src="@Model.EmblemPath" class="d-none d-md-block">
 </picture>
-<h1>Max Power: @(Model.MaxPower + Model.BonusPower)</h1>
+<h1>Max Power: @(Model.MaxPowerHuman)</h1>
 <ul>
-  <li>Base Power: @Model.MaxPower</li>
+  <li>Base Power: @Model.BasePowerHuman</li>
   <li>Seasonal Artifact Power: @Model.BonusPower</li>
 </ul>
 
