include power level of season pass items

--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -20,7 +20,7 @@
   <li>Seasonal Artifact Power: @Model.BonusPower</li>
 </ul>
 
-<h1>Engram Power Levels</h1>
+<h1>Item Power Levels</h1>
 <ul>
     @foreach(var engram in Model.Engrams)
     {
