keep max power level all on the same line
this prevents the fraction part from being on a new line on small devices

--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -14,7 +14,7 @@
   <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
   <img src="@Model.EmblemPath" class="d-none d-md-block">
 </picture>
-<h1>Max Power: @(Model.MaxPowerHuman)</h1>
+<h1>Max Power: <span style="white-space: nowrap;">@(Model.MaxPowerHuman)</span></h1>
 <ul>
   <li>Base Power: @Model.BasePowerHuman</li>
   <li>Seasonal Artifact Power: @Model.BonusPower</li>
