--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -5,12 +5,24 @@
 }
 
 <div class="row">
-    <div class="col-md-12">
-      <ul>
-      @foreach (var character in Model.Characters)
-      {
-        <li><img src="@character.EmblemPath" width="48" height="48"> <a asp-action="Details" asp-controller="Character" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id" asp-route-characterId="@character.Id">@character</a></li>
-      }
-      </ul>
-    </div>
+  <h1>Max Power Level</h1>
+  <div class="col-md-12">
+    <ul>
+    @foreach (var character in Model.Characters)
+    {
+      <li><img src="@character.EmblemPath" width="48" height="48"> <a asp-action="Details" asp-controller="Character" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id" asp-route-characterId="@character.Id">@character</a></li>
+    }
+    </ul>
+  </div>
+</div>
+
+<div class="row">
+  <h1>Season Pass Info</h1>
+  <div class="col-md-12">
+    <ul>
+      <li>End Date: @Model.SeasonPassInfo.EndDate</li>
+      <li>Rank: @Model.SeasonPassInfo.Rank</li>
+      <li>Ranks per Week for +20 Power: @Model.SeasonPassInfo.RanksPerWeek</li>
+    </ul>
+  </div>
 </div>
