display the season end date in the browser's locale

--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="row">
-  <h1>Max Power Level</h1>
   <div class="col-md-12">
+    <h1>Max Power Level</h1>
     <ul>
     @foreach (var character in Model.Characters)
     {
@@ -17,10 +17,22 @@
 </div>
 
 <div class="row">
-  <h1>Season Pass Info</h1>
   <div class="col-md-12">
+    <h1>Season Pass Info</h1>
     <ul>
-      <li>End Date: @Model.SeasonPassInfo.EndDate</li>
+      <li>End Date:
+        <script>
+          var strDate = new String('@Model.SeasonPassInfo.EndDate.ToString("MM/dd/yyyy hh:mm:ss tt") UTC');
+          var localTime = new Date(strDate);
+          if(localTime.toLocaleDateString !== undefined) {
+            var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            document.write(localTime.toLocaleDateString(undefined, options));
+          }
+          else {
+            document.write(localTime.toLocaleString());
+          }
+        </script>
+      </li>
       <li>Rank: @Model.SeasonPassInfo.Rank</li>
       <li>Ranks per Week for +20 Power: @Model.SeasonPassInfo.RanksPerWeek</li>
     </ul>
