handle testing before the season starts

--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -16,6 +16,8 @@
   </div>
 </div>
 
+@if(@Model.SeasonPassInfo != null)
+{
 <div class="row">
   <div class="col-md-12">
     <h1>Season Pass Info</h1>
@@ -43,3 +45,4 @@
     </ul>
   </div>
 </div>
+}
