credit Vendor Engrams for the vendor data

--- a/MaxPowerLevel/Views/Shared/_Layout.cshtml
+++ b/MaxPowerLevel/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Andy Schott
+            &copy; 2019-2020 - Andy Schott. Vendor information courtesy of <a href="https://vendorengrams.xyz">Vendor Engrams</a>
         </div>
     </footer>
 
