--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -1,6 +1,4 @@
 @model CharacterViewModel
-@using Humanizer
-@using System.Linq
 
 @{
     ViewData["Title"] = Model.ClassName + " Max Power";
@@ -20,64 +18,4 @@
   <li>Seasonal Artifact Power: @Model.BonusPower</li>
 </ul>
 
-@{
-  var lowestItems = Model.LowestItems;
-  var recommendations = Model.Recommendations;
-}
-
-@if(Model.Recommendations.Any())
-{
-  <h1>Recommendations</h1>
-  <ol>
-    @foreach(var recommendation in recommendations)
-    {
-      <li>@recommendation</li>
-      @if(recommendation.Activities.Any())
-      {
-        <ol>
-          @foreach(var activity in recommendation.Activities)
-          {
-            <li>@activity</li>
-          }
-        </ol>
-      }
-    }
-  </ol>
-}
-
-<h1>Item Power Levels</h1>
-<ul>
-    @foreach(var engram in Model.Engrams)
-    {
-        <li>@engram.Description</li>
-    }
-</ul>
-
-<div class="container">
-  @if(lowestItems.Any())
-  {
-    <div class="row">
-      <h1>@("Lowest Item".ToQuantity(lowestItems.Count(), ShowQuantityAs.None))</h1>
-    </div>
-    <div class="row">
-      @foreach(var item in lowestItems)
-      {
-        <div class="col-auto">
-          @await Html.PartialAsync("ItemPartial", item)
-        </div>
-      }
-    </div>
-  }
-
-  <div class="row">
-    <h1>Highest Power Items</h1>
-  </div>
-  <div class="row">
-    @foreach(var item in Model.Items)
-    {
-      <div class="col-md-4">
-        @await Html.PartialAsync("ItemPartial", item)
-      </div>
-    }
-  </div>
-</div>
+@await Html.PartialAsync("CharacterPartial", Model);
