better UI for the dashboard

--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -18,4 +18,4 @@
   <li>Seasonal Artifact Power: @Model.BonusPower</li>
 </ul>
 
-@await Html.PartialAsync("CharacterPartial", Model);
+@await Html.PartialAsync("CharacterPartial", Model)
