--- a/MaxPowerLevel/Views/Shared/CharacterPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/CharacterPartial.cshtml
@@ -57,7 +57,7 @@
   <div class="row">
     @foreach(var item in Model.Items)
     {
-      <div class="col-lg-4">
+      <div class=@("col-md-" + (12 / Model.ItemsPerRow))>
         @await Html.PartialAsync("ItemPartial", item)
       </div>
     }
