--- a/MaxPowerLevel/Views/Shared/CharacterPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/CharacterPartial.cshtml
@@ -1,11 +1,25 @@
 @model CharacterViewModel
+@using Humanizer
+@using System.Linq
 
-@await Html.PartialAsync("RecommendationsPartial", Model.Recommendations)
+@if(Model.Recommendations.Any())
+{
+  <h1>Recommendations</h1>
+  @await Html.PartialAsync("RecommendationsPartial", Model.Recommendations)
+}
+
+<h1>Item Power Levels</h1>
 @await Html.PartialAsync("ItemPowerLevelsPartial", Model.Engrams)
 
 <div class="container">
   <div class="row">
+    <h1>@("Lowest Item".ToQuantity(Model.LowestItems.Count(), ShowQuantityAs.None))</h1>
+  </div>
+  <div class="row">
     @await Html.PartialAsync("LowestItemsPartial", Model.LowestItems)
+  </div>
+  <div class="row">
+    <h1>Highest Power Items</h1>
   </div>
   <div class="row">
     @await Html.PartialAsync("HighestItemsPartial", Model)
