character summary is aligned to the top
looks better when there is a mix of whole number and fractional max power

--- a/MaxPowerLevel/Views/Account/Dashboard.cshtml
+++ b/MaxPowerLevel/Views/Account/Dashboard.cshtml
@@ -27,7 +27,7 @@
     <tr>
         @foreach (var character in Model)
         {
-            <td>
+            <td style="vertical-align: top;">
                 @await Html.PartialAsync("CharacterSummaryPartial", character)
             </td>
         }
