--- a/MaxPowerLevel/Views/Character/Details.cshtml
+++ b/MaxPowerLevel/Views/Character/Details.cshtml
@@ -8,9 +8,12 @@
   <a asp-route="AccountDetails" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.AccountId">&lt;&lt; Characters</a>
 </p>
 
-<picture class="float-right">
-  <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
-  <img src="@Model.EmblemPath" class="d-none d-md-block">
-</picture>
+@if(!string.IsNullOrEmpty(Model.EmblemBackgroundPath))
+{
+  <picture class="float-right">
+    <source media="(min-width: 992px)" srcset="@Model.EmblemBackgroundPath">
+    <img src="@Model.EmblemPath" class="d-none d-md-block">
+  </picture>
+}
 @await Html.PartialAsync("CharacterSummaryPartial", Model)
 @await Html.PartialAsync("CharacterPartial", Model)
