basic display of all charged with light mods

--- a/MaxPowerLevel/Views/Account/Details.cshtml
+++ b/MaxPowerLevel/Views/Account/Details.cshtml
@@ -53,3 +53,10 @@
   </div>
 </div>
 }
+
+<div class="row">
+  <h1>Charged with Light Mods</h1>
+</div>
+<div class="row">
+  <p>Display all mods that use the <a asp-action="Index" asp-controller="chargedWithLight" asp-route-type="@((int)Model.Type)" asp-route-id="@Model.Id">Charged with Light </a> mechanic.</p>
+</div>
