--- a/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
@@ -1,6 +1,6 @@
 @model ModData
 
-<span>@Model.Name</span>
+<span><img src="@Model.IconUrl">@Model.Name</span>
 <ul>
     <li>@Model.Type
     <li>@Model.Description
