display all perks on the mods

--- a/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
@@ -2,6 +2,9 @@
 
 <span><img src="@Model.IconUrl">@Model.Name</span>
 <ul>
-    <li>@Model.Type
-    <li>@Model.Description
+    <li>@Model.Type</li>
+    @foreach(var perk in Model.Perks)
+    {
+        <li>@perk</li>
+    }
 </ul>
