--- a/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
@@ -1,8 +1,7 @@
 @model ModData
 
-<span><img src="@Model.IconUrl">@Model.Name</span>
+<span><img src="@Model.IconUrl">@Model.Name (@Model.Element, @Model.Type)</span>
 <ul>
-    <li>@Model.Type</li>
     @foreach(var perk in Model.Perks)
     {
         <li>@perk</li>
