--- a/MaxPowerLevel/Views/_ViewImports.cshtml
+++ b/MaxPowerLevel/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MaxPowerLevel
 @using MaxPowerLevel.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MaxPowerLevel
