include note about the bug where Season of Arrivals mods won't show as unlocked

--- a/MaxPowerLevel/Views/ChargedWithLight/Index.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/Index.cshtml
@@ -14,6 +14,9 @@
         <h1>Charged with Light Mods</h1>
     </div>
     <div class="row">
+        <p><em>NOTE: There is currently a bug in the Bungie API where mods from Season of Arrivals won't show as unlocked even if they are. Sorry!</em></p>
+    </div>
+    <div class="row">
         <div class="col-md-6">
             <h2>Become Charged with Light</h2>
             <ul>
